- Fixed alignment issues.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* Colors */
 :root {
-    --color-primary: aqua;
+    --color-primary: #41cc8f;
     --color-secondary: white;
 }
 
@@ -51,6 +51,11 @@
 .ph-0 {
     padding-left: 0 !important;
     padding-right: 0 !important;
+}
+
+.white-link {
+    text-decoration: none;
+    color: var(--color-secondary) !important;
 }
 
 *,
@@ -179,7 +184,7 @@ body {
 }
 
 .section {
-    padding: 2em 5em;
+    padding: 4em 5em;
 }
 
 /* Section Stats */
@@ -217,27 +222,49 @@ body {
 }
 
 .section-2 img {
-    -webkit-box-shadow: 65px -2px 0px -41px rgba(232,232,232,1);
-    -moz-box-shadow: 65px -2px 0px -41px rgba(232,232,232,1);
-    box-shadow: 65px -2px 0px -41px rgba(232,232,232,1);
+    -webkit-box-shadow: 65px -2px 0 -41px rgba(232,232,232,1);
+    -moz-box-shadow: 65px -2px 0 -41px rgba(232,232,232,1);
+    box-shadow: 65px -2px 0 -41px rgba(232,232,232,1);
 }
+
 .section-2-text {
     padding: 5rem;
 }
-.sec-3 {
-    background-image: url(./assets/backimg.jpg);
+
+/* Section Who we are */
+.section.who-we-are img {
+    box-shadow: 75px 0 5px -40px rgb(240 240 240 / 75%);
+}
+
+/* Section Place where you find yourself */
+
+.section.place-where-you-find-yourself {
+    height: 300px;
+}
+
+.section .place-where-you-find-yourself__promotion {
+    padding: 4em 1.5em 4em 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    background: var(--color-primary);
+    color: var(--color-secondary);
+}
+
+.section .place-where-you-find-yourself__img-holder {
+    background-image: url('./assets/place-where-you-find-img.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    color: var(--color-secondary);
-    padding: 40px !important;
-    text-align: right;
 }
+
 .img-fluid {
     background-repeat: no-repeat !important;
     background-size: cover !important;
     width: 100% !important;
     height: 43vh !important;
 }
+
+/* Media Queries */
 
 @media only screen and (max-width: 999px) {
     .section-2-text {
